# printout

./: mkdocs.yml  publish.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md  requirements.txt
printout/: __init__.py
