[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[metadata]
name = "printout"
version = "1.2"
description = "Enhanced print function with automatic logging"
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "Jelani Jenkins", email = "jj@jenkinscode.com" }]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]